installr 0.9.5 (2013-06-12)
---------------------------

NEW FUNCTIONS ADDED:
   * download_RStudio_CRAN_data
   * read_RStudio_CRAN_data
   * barplot_package_users_per_day
   * lineplot_package_downloads
   * format_RStudio_CRAN_data

UPDATED FUNCTIONS:
   * require2 - the 'package' parameter no longer needs quotes. (just like in the require function)

OTHER NOTES:
   * RStudio_CRAN_data.r file created



installr 0.9.4 (2013-05-21)
---------------------------

NEW FUNCTIONS ADDED:
   * myip - return your ip address.
   * freegeoip - Geolocate IP addresses in R (contributed by Heuristic Andrew)
   * restart_RGui - a function to restart Rgui from Rgui
   
UPDATED FUNCTIONS:
   * require2 - added the "ask" parameter.

OTHER NOTES:
   * geo_functions.r file created
   * cranometer - function moved to the geo_functions.r file.


installr 0.9.3 (2013-05-18)
---------------------------

UPDATED FUNCTIONS:
   * install.R - started using checkMD5sums2 instead of checkMD5sums in order to allow the manual removal of the files ‘etc/Rconsole’ and ‘etc/Rprofile.site’ from the checksums (they are changed during the R installation process, and always give an error massage)
   * checkMD5sums2 - added the omit_files parameter (allowing the removal of the files ‘etc/Rconsole’ and ‘etc/Rprofile.site’ from the checksums of an R installation)
   * get.installed.R.folders - making the function more robust, by having it rely on the README files instead of the folder names. (based on a bug report by GilesCrane - thanks.)
   * R_version_in_a_folder function added (get the version of R installed in a folder. Based on the README file name inside the folder)


installr 0.9.2 (2013-05-14)
---------------------------

NEW FUNCTIONS ADDED:
   * cranometer - Estimates the speed of each CRAN mirror by measuring the time it takes to download the NEWS file. (including an example of creating a world-map based on this data)