@@ -46,6 +46,7 @@ export(is.Rgui)
 export(is.RStudio)
 export(is.windows)
 export(lineplot_package_downloads)
+export(most_downloaded_packages)
 export(myip)
 export(os.hibernate)
 export(os.lock)
